test/Failing/DependentWildcardConfusion.pi
module Dependent where

data Data : Type 1 :=
C (X: Type) (x: X) (Y: Type) (X -> Y): Data

Y : Data -> Type 1
Y = \d . case d of C _ _ y _ -> y

f : (d: Data) -> Y d
f = \d . case d of C _ x _ _ -> x